# modelcontextprotocol_create-python-server

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/create_mcp_server/: __init__.py
